fxed minor display issue on mobile and removed hover feature for mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@ html {
 
 body {
   font-family: sans-serif;
-  background: rgb(131,58,180);
   background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
 }
 
@@ -54,10 +53,12 @@ button {
   border-style: solid;
 }
 
-button:hover {
-  background-color: rgba(255, 255, 255, 0.71);
-  color: black;
-  border-color: black;
+@media (hover: hover){
+  button:hover {
+    background-color: rgba(255, 255, 255, 0.71);
+    color: black;
+    border-color: black;
+  }
 }
 
 .CurrentPlayer p {
@@ -76,8 +77,7 @@ button:hover {
 }
 
 .BoardGame {
-  margin: 2em auto;
-  padding: 0 1em;
+  padding: auto;
   padding-bottom: 1em;
   display: grid;
   width: 70vw;
